More compile fixes.  Try to use combined Measure plus NPM info everywhere.  Try to pass the NpmPackageLoader everywhere too.  Still not quite compiling.